Alias, SSH: Clean up old sites

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,29 +1,10 @@
 # Note: This has to be hard-linked, because ssh doesn't support symlinks.
 
-Host vvv-personal vvv-wme
-	HostName 192.168.50.4
-	User vagrant
-	Port 22
-	UserKnownHostsFile /dev/null
-	StrictHostKeyChecking no
-	PasswordAuthentication no
-	ForwardAgent yes
-
-Host vvv-personal
-	IdentityFile ~/vhosts/virtual-machines/vvv-personal/.vagrant/machines/default/virtualbox/private_key
-
-Host vvv-wme
-	IdentityFile ~/vhosts/virtual-machines/vvv-wme/.vagrant/machines/default/virtualbox/private_key
-
 Host iandunn.name
 	Hostname durin.dreamhost.com
 	User iandunn206
 
-Host samantha
-	Hostname 142.93.19.77
-	User root
-
-Host support.wordcamp.org support marx morse
+Host support
 	Hostname support.wordcamp.org
 	User wordcamp
 	#  RemoteCommand bash --rcfile ~/iandunn-dotfiles/.bashrc -i
@@ -31,7 +12,7 @@ Host support.wordcamp.org support marx morse
 Host proxy.automattic.com
 	#IdentityFile ~/.ssh/id_rsa_automattic
 
-Host wordpress.org wordcamp.org w.org
+Host wordpress.org wordcamp.org w.org wporg
 	Hostname iandunn.dev.ord.wordpress.org
 	User wporgdev
 	ForwardAgent yes
@@ -57,21 +38,6 @@ Host wordpress.com wp.com wpcom
 Host carlybish.com
 	Hostname wp543664.dreamhostps.com
 	User wp_x7nhq7
-
-Host level-3-media.com
-	Hostname app02.mpangohosting.com
-	User level3
-
-Host silencedmajority.org
-	Hostname silencedmajority.org
-	User silenced
-	Port 18765
-
-Host brewsworthy.net
-	# Hostname brewsworthy.net
-	Hostname 108.163.199.140
-	User brewswor
-	Port 18765
 
 Host gutenberg.run
 	User root
