--- a/.gnupg/gpg-agent.conf
+++ b/.gnupg/gpg-agent.conf
@@ -1,3 +1,3 @@
-pinentry-program /usr/local/bin/pinentry
+pinentry-program /opt/homebrew/bin/pinentry
 max-cache-ttl 60480000
 default-cache-ttl 60480000
