SSH: Update A8C, WP20

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,16 +1,18 @@
 # Note: This has to be hard-linked, because ssh doesn't support symlinks.
+# ln ~/.ssh/config ~/dotfiles/.ssh/config
 
 Host iandunn.name
 	Hostname durin.dreamhost.com
 	User iandunn206
 
-Host support
+Host support.wordcamp.org support marx morse
 	Hostname support.wordcamp.org
 	User wordcamp
 	#  RemoteCommand bash --rcfile ~/iandunn-dotfiles/.bashrc -i
 
 Host proxy.automattic.com
-	#IdentityFile ~/.ssh/id_rsa_automattic
+	IdentityFile ~/.ssh/id_ed25519_automattic
+	IdentitiesOnly yes
 
 Host wordpress.org wordcamp.org w.org wporg
 	Hostname iandunn.dev.ord.wordpress.org
@@ -26,9 +28,17 @@ Host wordpressfoundation.org wpf
 	User wpf
 	#  RemoteCommand bash --rcfile ~/iandunn-dotfiles/.bashrc -i
 
-Host wp15.wordpress.net
+Host wp15 wp15.wordpress.net
 	Hostname wp15.wordpress.net
 	User wp15
+
+Host wp20 wp20.wordpress.net
+	Hostname wp20.wordpress.net
+	User wp20
+
+Host wp20staging
+	Hostname ssh.atomicsites.net
+	User e8d693aa6e945b939
 
 Host wordpress.com wp.com wpcom
 	Hostname iandunn.dev.dfw.wordpress.com
