SSH: Update `iandunn.name` hostname

--- a/.ssh/config
+++ b/.ssh/config
@@ -2,7 +2,7 @@
 # ln ~/.ssh/config ~/dotfiles/.ssh/config
 
 Host iandunn.name
-	Hostname durin.dreamhost.com
+	Hostname iad1-shared-e1-29.dreamhost.com
 	User iandunn206
 
 Host support.wordcamp.org support marx morse
@@ -12,7 +12,6 @@ Host support.wordcamp.org support marx morse
 
 Host proxy.automattic.com
 	IdentityFile ~/.ssh/id_ed25519_automattic
-	IdentitiesOnly yes
 
 Host wordpress.org wordcamp.org w.org wporg
 	Hostname iandunn.dev.ord.wordpress.org
