SSH: Add new keys, deprecate old one

--- a/.ssh/config
+++ b/.ssh/config
@@ -58,4 +58,8 @@ Host *
 	UseRoaming no
 		# See http://undeadly.org/cgi?action=article&sid=20160114142733
 	IdentitiesOnly yes
-	IdentityFile ~/.ssh/id_rsa
+	IdentityFile ~/.ssh/personal_ed25519
+	IdentityFile ~/.ssh/10up_ed25519
+
+	# Disable the old key as a reminder to update it any places that are still using it.
+	#IdentityFile ~/.ssh/id_rsa
