--- a/.gitconfig
+++ b/.gitconfig
@@ -20,75 +20,6 @@
 		# todo add one with word-diff=color
 
 	#
-	# checkout
-	#
-	co  = checkout
-	cob = checkout -b
-	cop = checkout -p
-	# Document what this does because it's not obvious.
-	cos = !sh -c \"git branch -a | grep -v remotes | grep $1 | head -n 1 | xargs git checkout\"
-
-	#
-	# commit
-	#
-	ci   = commit
-	cia  = commit --amend
-	cinv = commit --no-verify
-	cim  = commit -m
-
-	#
-	# stash
-	#
-	pop		= stash pop
-	sshow	= stash show
-	sdrop	= stash drop
-
-	#
-	# misc
-	#
-	cherp 	  = cherry-pick
-	reshh 	  = reset --hard HEAD
-	resp      = reset -p
-	showm     = show --show-signature --no-abbrev-commit --format=medium  # Appending `m` for `medium` because can't overwrite default `show` command :( -- see https://stackoverflow.com/questions/3538774/is-it-possible-to-override-git-command-by-git-alias
-	amshow    = am --show-current-patch   # Useful for understanding the context when resolving merge conflicts.
-	pullu     = pull --set-upstream
-	# what to name this? maybe better to just memorize. for deleting remote branches. need origin name maybe. rbranchrm = push -d
-	pushnv	  = push --no-verify
-
-	# include -i to avoid `the following untracked working tree files would be overwritten by checkout...` annoyance.
-	# test this out before committing though to make sure it doesn't end up including stuff you don't wanna delete in other situations
-	cleanid    = clean -id
-
-
-	#
-	# merge
-	#
-	mera	= merge --abort
-
-
-	# ideally want this to automatically run on every commit whenever it's modified in any way.
-	# e.g., want the date of the commit to be the _modified_ date, not the _created_ date
-	# otherwise i create a commit in a branch, the feature gets de-prioritized, then i come back a few months later and continue working
-	# i squash everything down to that first few commits, but their dates are months in the past, so viewing the commit history doesn't make sense
-	# you see older commits appearing before newer commits
-	#
-	# could try a `post-rewrite` hook. is there a way to make it apply to all repos, like how gitignore_global does?
-	#	worst case could put hook in dotfiles/bin or whatever, and add symnlikn anywhere you wanna use it
-	#
-	# this is a step towards that, but only applies to HEAD. look for way to automate for all modified commits:
-	# git rebase -i production
-	# replace `pick` with `edit` for all commits
-	# for each
-	#   git newdate
-	#   git rebase --continue
-	# there's probably a better way, though
-	newdate = commit --amend --date=now --no-edit
-
-	pullas = pull --autostash
-	# push = todo a bash function that checks if the current folder is wordcamp.test. if it is, then show a prompt asking if want to run pre-commit githooks.
-	# defaults to no (b/c working on branch). can answer yes if ready to run over entire branch for pr, or before pushing to production branch
-
-	#
 	# branch
 	#
 	bmain	= !git remote show origin | grep 'HEAD branch' | cut -d' ' -f5
@@ -107,6 +38,22 @@
 	# e.g., git track origin/28-elasticsearch
 	track = branch -u
 
+	#
+	# checkout
+	#
+	co  = checkout
+	cob = checkout -b
+	cop = checkout -p
+	# Document what this does because it's not obvious.
+	cos = !sh -c \"git branch -a | grep -v remotes | grep $1 | head -n 1 | xargs git checkout\"
+
+	#
+	# commit
+	#
+	ci   = commit
+	cia  = commit --amend
+	cinv = commit --no-verify
+	cim  = commit -m
 
 	#
 	# diff
@@ -154,6 +101,56 @@
 	logsvn = log ...git-svn
 
 	#
+	# merge
+	#
+	mera	= merge --abort
+
+	#
+	# misc
+	#
+	cherp 	  = cherry-pick
+	reshh 	  = reset --hard HEAD
+	resp      = reset -p
+	showm     = show --show-signature --no-abbrev-commit --format=medium  # Appending `m` for `medium` because can't overwrite default `show` command :( -- see https://stackoverflow.com/questions/3538774/is-it-possible-to-override-git-command-by-git-alias
+	amshow    = am --show-current-patch   # Useful for understanding the context when resolving merge conflicts.
+
+	# include -i to avoid `the following untracked working tree files would be overwritten by checkout...` annoyance.
+	# test this out before committing though to make sure it doesn't end up including stuff you don't wanna delete in other situations
+	cleanid    = clean -id
+
+	# ideally want this to automatically run on every commit whenever it's modified in any way.
+	# e.g., want the date of the commit to be the _modified_ date, not the _created_ date
+	# otherwise i create a commit in a branch, the feature gets de-prioritized, then i come back a few months later and continue working
+	# i squash everything down to that first few commits, but their dates are months in the past, so viewing the commit history doesn't make sense
+	# you see older commits appearing before newer commits
+	#
+	# could try a `post-rewrite` hook. is there a way to make it apply to all repos, like how gitignore_global does?
+	#	worst case could put hook in dotfiles/bin or whatever, and add symnlikn anywhere you wanna use it
+	#
+	# this is a step towards that, but only applies to HEAD. look for way to automate for all modified commits:
+	# git rebase -i production
+	# replace `pick` with `edit` for all commits
+	# for each
+	#   git newdate
+	#   git rebase --continue
+	# there's probably a better way, though
+	newdate = commit --amend --date=now --no-edit
+
+	#
+	# pull
+	#
+	pullas = pull --autostash
+	# push = todo a bash function that checks if the current folder is wordcamp.test. if it is, then show a prompt asking if want to run pre-commit githooks.
+	# defaults to no (b/c working on branch). can answer yes if ready to run over entire branch for pr, or before pushing to production branch
+	pullu     = pull --set-upstream
+	# what to name this? maybe better to just memorize. for deleting remote branches. need origin name maybe. rbranchrm = push -d
+
+	#
+	# push
+	#
+	pushnv	  = push --no-verify
+
+	#
 	# rebase
 	#
 	reba	 = rebase --abort
@@ -176,6 +173,13 @@
 		# maybe do `git rebase production`, then run `git co <file> --ours` for each conflict that comes up?
 		# that's less convenient, but didn't result in same lots of losses
 		# it did result in some minor losses], though, which still is a dealbreaker. need to udnerstand more and try in other contexts before start using it blindly
+
+	#
+	# stash
+	#
+	pop		= stash pop
+	sshow	= stash show
+	sdrop	= stash drop
 
 	#
 	# status
