--- a/.gitconfig
+++ b/.gitconfig
@@ -27,6 +27,7 @@
 		# use `git-svn` ref for git-svn
 	bdel	= branch -D
 		# breaks autocomplete of branch name. can i extend the autocomplete to include it?
+	bm		= branch -m
 
 	rmmerged = !git branch -d $(git branch --merged=develop | grep -v develop) && git fetch --prune
 		# todo test -- https://medium.com/@FlorentDestrema/a-simple-way-to-clean-up-your-git-project-branches-283b87478fbc
