git: disable pull rebase to avoid overwriting commits

--- a/.gitconfig
+++ b/.gitconfig
@@ -242,7 +242,10 @@
 	forceWithLease = true
 
 [pull]
-	rebase = true
+	# true will cause local changes to be overwritten without warning. Or at least it seems that way,
+	# even though it doesn't sound like it should, and I don't think it did in the past.
+	# Need to test this, but no time right now.
+	rebase = false
 
 [rebase]
 	abbreviateCommands = true
