--- a/.gitconfig
+++ b/.gitconfig
@@ -54,10 +54,11 @@
 	# commit
 	#
 	ci   = commit
-	cia  = commit --amend
 	cinv = commit --no-verify
-	cimnv = commit --no-verify -m
-	cim  = commit -m
+	cia  = commit --amend
+	cianv  = commit --amend --no-verify
+	cim  = commit --message
+	cimnv = commit --no-verify --message
 
 	#
 	# diff
