--- a/.gitconfig
+++ b/.gitconfig
@@ -55,6 +55,7 @@
 	#
 	ci   = commit
 	cia  = commit --amend
+	cianv = commit --amend --no-verify
 	cinv = commit --no-verify
 	cimnv = commit --no-verify -m
 	cim  = commit -m
